<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/big_shoulders_stencil_text_extrabold"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/explore_text"
        android:textColor="@color/dark_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- RecyclerView - Ülke Butonlarını Listelemek İçin -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCountries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- navigation bar -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        android:backgroundTint="@color/green"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/homeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/home"
                app:tint="@android:color/white"
                android:contentDescription="@string/home_button"/>

            <ImageView
                android:id="@+id/searchBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/search"
                app:tint="@color/dark_green"
                android:contentDescription="@string/search_button"/>

            <ImageView
                android:id="@+id/mapBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/map"
                app:tint="@android:color/white"
                android:contentDescription="@string/map_button"/>

            <ImageView
                android:id="@+id/profileBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/person"
                app:tint="@android:color/white"
                android:contentDescription="@string/profile_button"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
