<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- FragmentContainerView ile Harita -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Alt Navigasyon Çubuğu -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="8dp"
            android:backgroundTint="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <!-- Ana Sayfa Butonu -->
                <ImageView
                    android:id="@+id/homeBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/home"
                    android:contentDescription="@string/homeBtn_desc"
                    app:tint="@android:color/white" />

                <!-- Arama Butonu -->
                <ImageView
                    android:id="@+id/searchBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/search"
                    android:contentDescription="@string/searchBtn_desc"
                    app:tint="@android:color/white" />

                <!-- Harita Butonu -->
                <ImageView
                    android:id="@+id/mapBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/map"
                    android:contentDescription="@string/mapBtn_desc"
                    app:tint="@android:color/black" />

                <!-- Profil Butonu -->
                <ImageView
                    android:id="@+id/profileBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/person"
                    android:contentDescription="@string/profileBtn_desc"
                    app:tint="@android:color/white" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
